specified properties from flight.place, added endpoint to checkPassword
